# SpringLogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SpringLogger.c  SpringLogger.h  main.c
